Make preference fields have the appropriate input type

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     <PreferenceCategory android:title="@string/pref_category_user">
-    	<EditTextPreference android:key="pref_server_auth_username" android:title="@string/pref_upload_username"/>
-    	<EditTextPreference android:key="pref_server_auth_password" android:title="@string/pref_upload_password"/>
+        <EditTextPreference
+            android:key="pref_server_auth_username"
+            android:title="@string/pref_upload_username"
+            android:inputType="textNoSuggestions"/>
+        <EditTextPreference
+            android:key="pref_server_auth_password"
+            android:title="@string/pref_upload_password"
+            android:inputType="textVisiblePassword"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/pref_category_server">
-        <EditTextPreference android:key="pref_server_upload_url" android:title="@string/pref_upload_url"/>
+        <EditTextPreference
+            android:key="pref_server_upload_url"
+            android:title="@string/pref_upload_url"
+            android:inputType="textUri"/>
     </PreferenceCategory>
 </PreferenceScreen>
