--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,5 +7,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_clear_history"
+        android:showAsAction="never"
+        android:orderInCategory="101"
+        android:title="@string/action_clear_history"/>
 
 </menu>
