--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:paddingLeft="4sp"
+    android:paddingRight="4sp" >
 
     <ImageView
         android:id="@+id/history_list_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="64sp"
+        android:layout_height="64sp"
+        android:layout_marginLeft="4sp"
+        android:layout_marginRight="4sp"
+        android:contentDescription="@string/history_list_item_thumbnail_caption" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="4sp"
+        android:layout_marginRight="4sp"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical" >
 
         <TextView
