--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="4sp"
@@ -12,28 +12,34 @@
         android:layout_height="64sp"
         android:layout_marginLeft="4sp"
         android:layout_marginRight="4sp"
+        android:layout_alignParentLeft="true"
         android:contentDescription="@string/history_list_item_thumbnail_caption" />
 
-    <LinearLayout
+    <ImageButton
+        android:id="@+id/history_list_item_copy"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:src="@android:drawable/ic_menu_share" />
+
+    <TextView
+        android:id="@+id/history_list_item_url"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4sp"
-        android:layout_marginRight="4sp"
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical" >
+        android:layout_toRightOf="@+id/history_list_item_image"
+        android:layout_toLeftOf="@+id/history_list_item_copy"
+        android:layout_alignParentTop="true"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/history_list_item_url"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/history_list_item_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/history_list_item_url"
+        android:layout_toRightOf="@+id/history_list_item_image"
+        android:layout_toLeftOf="@+id/history_list_item_copy"
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/history_list_item_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
