Make sure list items can still be selected

--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:paddingLeft="4sp"
     android:paddingRight="4sp"
-    android:background="?android:attr/activatedBackgroundIndicator" >
+    android:background="?android:attr/activatedBackgroundIndicator"
+    android:descendantFocusability="blocksDescendants" >
 
     <ImageView
         android:id="@+id/history_list_item_image"
